// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`quick-insert.ts: Insert date via quick insert 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "timestamp": "1546300800000",
          },
          "type": "date",
        },
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`quick-insert.ts: Insert date via quick insert with global date mock intact 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "timestamp": "1502841600000",
          },
          "type": "date",
        },
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`quick-insert.ts: Insert date with global date mock working correctly after a reset 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "timestamp": "1502841600000",
          },
          "type": "date",
        },
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
